# kameo_es

./: Cargo.toml  README.md  flake.nix
core/: Cargo.toml
core/src/: lib.rs
examples/: bank_account.rs  projection.rs
src/: command_service.rs  entity_actor.rs  entity_actor_old.rs  error.rs  event_handler.rs  event_store.rs  lib.rs  transaction.rs
src/event_handler/: file.rs  in_memory.rs  mongodb.rs  mongodb_bulk.rs  mongodb_correlations.rs  postgres.rs  postgres_bak.rs  sqlite.rs
