[workspace]
resolver = "2"
members = [".", "core", "macros"]

[package]
name = "kameo_es"
version = "0.1.0"
edition = "2021"

[dependencies]
kameo_es_core = { path = "core" }

anyhow = "1.0.82"
async-recursion = "1.1.1"
async-stream = "0.3.6"
bson = { version = "2.13.0", features = ["chrono-0_4", "uuid-1"], optional = true }
# cbor4ii = { version = "0.3.3", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2.2"
# eventus = { git = "https://github.com/tqwewe/eventus" }
futures = "0.3.30"
im = "15.1.0"
kameo = { path = "../kameo" } # "0.13.0"
mongodb = { version = "3.1.0", optional = true }
once_cell = "1.21.3"
# polodb_core = { path = "../../PoloDB/PoloDB/src/polodb_core", optional = true } # "5.1.2"
redis = { version = "0.32.4", features = ["tokio-comp"] }
regex = "1.11.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "*"
sierradb-client = { path = "../sierradb/crates/sierradb-client", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = [ "runtime-tokio" ], optional = true }
thiserror = "2.0"
tokio = { version = "1.37.0", features = ["fs", "sync"] }
tokio-util = "0.7.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["sync", "rt-multi-thread"] }

[features]
default = []
mongodb = [
  "dep:bson",
  "dep:mongodb"
]
# polodb = [
#   "dep:polodb_core"
# ]
postgres = [
  "dep:sqlx",
  "sqlx/postgres",
  "sqlx/uuid"
]
